# python-pdf2text

./: README.md  pyproject.toml
pdf2text/: main.py
