[tool.poetry]
name = "pdf2text"
version = "0.1.0"
description = ""
authors = ["Muku Otani <60395718+hareta0109@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
pathlib = "^1.0.1"
pdf2image = "^1.17.0"
pyocr = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
